--- a/jquery.miniColors.sprite.css
+++ b/jquery.miniColors.sprite.css
@@ -1,7 +1,14 @@
+.miniColors-trigger,
+.miniColors-colors,
+.miniColors-hues,
+.miniColors-colorPicker,
+.miniColors-huePicker {
+    background-image: url(images/jquery.miniColors.sprite.png);
+}
+
 .miniColors-trigger {
 	height: 22px;
 	width: 22px;
-	background-image: url(images/jquery.miniColors.sprite.png);
 	background-position: -10px -10px;
 	vertical-align: middle;
 	margin: 0 .25em;
@@ -36,7 +43,6 @@
 	left: 5px;
 	width: 150px;
 	height: 150px;
-	background-image: url(images/jquery.miniColors.sprite.png);
 	background-position: -10px -52px;
 	cursor: crosshair;
 }
@@ -47,7 +53,6 @@
 	left: 160px;
 	width: 20px;
 	height: 150px;
-	background-image: url(images/jquery.miniColors.sprite.png);
 	background-position: -10px -253px;
 	cursor: crosshair;
 }
@@ -56,7 +61,6 @@
 	position: absolute;
 	width: 11px;
 	height: 11px;
-	background-image: url(images/jquery.miniColors.sprite.png);
 	background-position: -10px -222px;
 }
 
@@ -65,6 +69,5 @@
 	left: -3px;
 	width: 26px;
 	height: 3px;
-	background-image: url(images/jquery.miniColors.sprite.png);
 	background-position: -10px -423px;
 }
