--- a/jquery.miniColors.css
+++ b/jquery.miniColors.css
@@ -51,15 +51,31 @@
 
 .miniColors-colorPicker {
 	position: absolute;
-	width: 11px;
-	height: 11px;
-	background: url(images/circle.gif) center no-repeat;
+	width: 9px;
+	height: 9px;
+	border: 1px solid #fff;
+	-moz-border-radius: 11px;
+	-webkit-border-radius: 11px;
+	border-radius: 11px;
+}
+.miniColors-colorPicker-inner {
+	position: absolute;
+	top: 0;
+	left: 0; 
+	width: 7px;
+	height: 7px;
+	border: 1px solid #000;
+	-moz-border-radius: 9px;
+	-webkit-border-radius: 9px;
+	border-radius: 9px;
 }
 
 .miniColors-huePicker {
 	position: absolute;
 	left: -3px;
-	width: 26px;
-	height: 3px;
-	background: url(images/line.gif) center no-repeat;
+	width: 24px;
+	height: 1px;
+	border: 1px solid #fff;
+	border-radius: 2px;
+	background: #000;
 }
