--- a/jquery.miniColors.css
+++ b/jquery.miniColors.css
@@ -35,7 +35,7 @@
 	left: 5px;
 	width: 150px;
 	height: 150px;
-	background: url(images/gradient.png) center no-repeat;
+	background: url(images/colors.png) right no-repeat;
 	cursor: crosshair;
 }
 
@@ -45,7 +45,7 @@
 	left: 160px;
 	width: 20px;
 	height: 150px;
-	background: url(images/rainbow.png) center no-repeat;
+	background: url(images/colors.png) left no-repeat;
 	cursor: crosshair;
 }
 
