--- a/jquery.miniColors.css
+++ b/jquery.miniColors.css
@@ -3,7 +3,7 @@
 	width: 22px;
 	background: url(images/trigger.png) center no-repeat;
 	vertical-align: middle;
-	margin: 0 .25em;
+	margin: 0 2px;
 	display: inline-block;
 	outline: none;
 }
@@ -12,7 +12,7 @@
 	position: absolute;
 	width: 175px;
 	height: 150px;
-	background: #FFF;
+	background: white;
 	border: solid 1px #BBB;
 	-moz-box-shadow: 0 0 6px rgba(0, 0, 0, .25);
 	-webkit-box-shadow: 0 0 6px rgba(0, 0, 0, .25);
@@ -25,8 +25,8 @@
 }
 
 .miniColors-selector.black {
-	background: #000;
-	border-color: #000;
+	background: black;
+	border-color: black;
 }
 
 .miniColors-colors {
@@ -53,7 +53,7 @@
 	position: absolute;
 	width: 9px;
 	height: 9px;
-	border: 1px solid #fff;
+	border: 1px solid black;
 	-moz-border-radius: 11px;
 	-webkit-border-radius: 11px;
 	border-radius: 11px;
@@ -64,7 +64,7 @@
 	left: 0; 
 	width: 7px;
 	height: 7px;
-	border: 1px solid #000;
+	border: 1px solid white;
 	-moz-border-radius: 9px;
 	-webkit-border-radius: 9px;
 	border-radius: 9px;
@@ -75,7 +75,6 @@
 	left: -3px;
 	width: 24px;
 	height: 1px;
-	border: 1px solid #fff;
-	border-radius: 2px;
-	background: #000;
+	border: 1px solid black;
+	background: white;
 }
