Implemented a new option called 'colorSwatches' that accepts an array of HEX color codes. These will be displayed as swatches beneath the color picker popup.  Clicking on a swatch will change the current color to the preset and refresh the picker.  This allows applications to provide consistent color schemes as a baseline, while still allowing freeform color selection using the picker.

--- a/jquery.miniColors.css
+++ b/jquery.miniColors.css
@@ -49,6 +49,22 @@
 	cursor: crosshair;
 }
 
+.miniColors-colorSwatches {
+	position: absolute;
+	top: 160px;
+	left: 5px;
+	width: 170px;
+	height: 20px;
+}
+
+.miniColors-colorSwatch {
+	height:12px;
+	width:12px;
+	display:inline-block;
+	margin:0px 2px;
+	cursor: pointer;
+}
+
 .miniColors-colorPicker {
 	position: absolute;
 	width: 9px;
