Fixed bug where certain values couldn't be typed in; removed opacity setting (detected via data-opacity now); minor code cleanup

--- a/jquery.miniColors.css
+++ b/jquery.miniColors.css
@@ -27,6 +27,11 @@ INPUT.miniColors {
 	border-color: black;
 }
 
+.miniColors-selector.gray {
+	background: #DDD;
+	border-color: #EEE;
+}
+
 .miniColors-colors {
 	position: absolute;
 	top: 5px;
