--- a/jquery.miniColors.css
+++ b/jquery.miniColors.css
@@ -15,6 +15,7 @@
 	width: 65px;
 	height: 16px;
 	vertical-align: middle;
+	border-radius: 0;
 	box-shadow: inset 0 2px 4px rgba(0, 0, 0, .04);
 	outline: none;
 	padding: 2px;
