--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -2,6 +2,13 @@
 	position: relative;
 }
 
+.minicolors-spacer {
+	display: block;
+	height: 151px;
+	width: 1px;
+	margin: 0;
+}
+
 .minicolors-swatch {
 	position: absolute;
 	vertical-align: middle;
@@ -11,6 +18,34 @@
 	padding: 0;
 	margin: 0;
 	display: inline-block;
+}
+
+.minicolors-swatch-list {
+	cursor: text;
+	padding: 0 0 0 1px;
+	margin: 0;
+	display: block;
+	line-height: 0px;
+	margin: 0;
+}
+
+.minicolors-swatch-icon {
+	min-width: 16px;
+	height: 16px;
+	margin: 1px 0 1px 1px;
+	border-radius: 4px;
+	display: inline-block;
+	background: url(jquery.minicolors.png) -80px 0;
+	cursor: pointer;
+}
+
+.minicolors-swatch-icon div {
+	min-width: 16px;
+	height: 16px;
+	padding: 0;
+	box-shadow: inset 0 0 2px #222222;
+	display: inline-block;
+	border-radius: 4px;
 }
 
 .minicolors-swatch-color {
@@ -31,7 +66,7 @@
 .minicolors-panel {
 	position: absolute;
 	width: 173px;
-	height: 152px;
+	/*height: 152px;*/
 	background: white;
 	border: solid 1px #CCC;
 	box-shadow: 0 0 20px rgba(0, 0, 0, .2);
@@ -42,10 +77,6 @@
 	display: none;
 }
 
-.minicolors-panel.minicolors-panel-transparency-button {
-	height: 180px;
-}
-
 .minicolors-panel.minicolors-visible {
 	display: block;
 }
@@ -53,10 +84,6 @@
 /* Panel positioning */
 .minicolors-position-top .minicolors-panel {
 	top: -154px;
-}
-
-.minicolors-position-top .minicolors-panel.minicolors-panel-transparency-button {
-	top: -182px;
 }
 
 .minicolors-position-right .minicolors-panel {
@@ -204,11 +231,6 @@
 	box-shadow: none;
 	z-index: auto;
 	display: inline-block;
-}
-
-.transparencyButton {
-	margin: 154px 2px 2px;
-	width: calc(100% - 4px);
 }
 
 /* Default theme */
