--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -32,7 +32,7 @@
 .minicolors-swatch-icon {
 	min-width: 16px;
 	height: 16px;
-	margin: 1px 0 1px 1px;
+	margin: 1px 0 0 1px;
 	border-radius: 4px;
 	display: inline-block;
 	background: url(jquery.minicolors.png) -80px 0;
