--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -2,13 +2,6 @@
 	position: relative;
 }
 
-.minicolors-spacer {
-	display: block;
-	height: 151px;
-	width: 1px;
-	margin: 0;
-}
-
 .minicolors-swatch {
 	position: absolute;
 	vertical-align: middle;
@@ -20,32 +13,34 @@
 	display: inline-block;
 }
 
-.minicolors-swatch-list {
+.minicolors-palette-list {
 	cursor: text;
 	padding: 0 0 0 1px;
 	margin: 0;
 	display: block;
 	line-height: 0px;
-	margin: 0;
+	margin: 151px 0 0 0;
 }
 
-.minicolors-swatch-icon {
-	min-width: 16px;
+.minicolors-palette-icon {
+	width: 16px;
 	height: 16px;
 	margin: 1px 0 0 1px;
-	border-radius: 4px;
+	border-radius: 2px;
 	display: inline-block;
-	background: url(jquery.minicolors.png) -80px 0;
+	background: url(jquery.minicolors.png) -82px -2px;
 	cursor: pointer;
 }
 
-.minicolors-swatch-icon div {
-	min-width: 16px;
+.minicolors-palette-icon-fill {
+	width: 16px;
 	height: 16px;
-	padding: 0;
-	box-shadow: inset 0 0 2px #222222;
+	margin: 0;
+	border-radius: 2px;
 	display: inline-block;
-	border-radius: 4px;
+	background-color: red;
+	cursor: pointer;
+	box-shadow: inset 0 0 1px #000;
 }
 
 .minicolors-swatch-color {
