re-add spacer: turns out we need it if we want to have a flexible-height picker (needed for palette)

--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -13,6 +13,12 @@
 	display: inline-block;
 }
 
+.minicolors-spacer {
+	height: 151px;
+	width: 10px;
+	display: block;
+}
+
 .minicolors-palette-list {
 	cursor: text;
 	padding: 0 0 0 1px;
