Border-radius should be inherited

--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -232,6 +232,9 @@
 	height: 28px;
 	border-radius: 3px;
 }
+.minicolors-theme-bootstrap .minicolors-swatch-color {
+	border-radius: inherit;
+}
 .minicolors-theme-bootstrap.minicolors-position-right .minicolors-swatch {
 	left: auto;
 	right: 3px;
