--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -235,6 +235,7 @@
 
 /* Bootstrap theme */
 .minicolors-theme-bootstrap .minicolors-swatch {
+    z-index: 2;
     top: 3px;
     left: 3px;
     width: 28px;
