--- a/colourpicker.css
+++ b/colourpicker.css
@@ -1,7 +1,7 @@
-.minicolors {
+.colourpicker {
   position: relative;
 }
-.minicolors-panel {
+.colourpicker-panel {
   position: absolute;
   width: 173px;
   height: 152px;
@@ -14,22 +14,22 @@
   box-sizing: content-box;
   display: none;
 }
-.minicolors-panel.minicolors-visible {
+.colourpicker-panel.colourpicker-visible {
   display: block;
 }
-.minicolors-position-top .minicolors-panel {
+.colourpicker-position-top .colourpicker-panel {
   top: -154px;
 }
-.minicolors-position-right .minicolors-panel {
+.colourpicker-position-right .colourpicker-panel {
   right: 0;
 }
-.minicolors-position-bottom .minicolors-panel {
+.colourpicker-position-bottom .colourpicker-panel {
   top: auto;
 }
-.minicolors-position-left .minicolors-panel {
+.colourpicker-position-left .colourpicker-panel {
   left: 0;
 }
-.minicolors .minicolors-grid {
+.colourpicker .colourpicker-grid {
   position: absolute;
   top: 1px;
   left: 1px;
@@ -38,12 +38,12 @@
   cursor: crosshair;
   background: linear-gradient(to right,#FFF,rgba(255,255,255,0));
 }
-.minicolors .minicolors-grid-inner {
+.colourpicker .colourpicker-grid-inner {
   width: 100%;
   height: 100%;
   background: linear-gradient(rgba(0,0,0,0),#000);
 }
-.minicolors-slider {
+.colourpicker-slider {
   position: absolute;
   top: 1px;
   left: 152px;
@@ -52,7 +52,7 @@
   background: linear-gradient(red 0,#f0f 17%,#00f 33%,#0ff 50%,#0f0 67%,#ff0 83%,red 100%);
   cursor: row-resize;
 }
-.minicolors-grid .minicolors-picker {
+.colourpicker-grid .colourpicker-picker {
   position: absolute;
   top: 70px;
   left: 70px;
@@ -64,7 +64,7 @@
   margin-left: -6px;
   background: none;
 }
-.minicolors-grid .minicolors-picker > div {
+.colourpicker-grid .colourpicker-picker > div {
   position: absolute;
   top: 0;
   left: 0;
@@ -76,7 +76,7 @@
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
-.minicolors-picker {
+.colourpicker-picker {
   position: absolute;
   top: 0;
   left: 0;
