--- a/colourpicker.css
+++ b/colourpicker.css
@@ -14,9 +14,6 @@
   box-sizing: content-box;
   display: none;
 }
-.colourpicker-panel.colourpicker-visible {
-  display: block;
-}
 .colourpicker-position-top .colourpicker-panel {
   top: -154px;
 }
@@ -43,26 +40,14 @@
   height: 100%;
   background: linear-gradient(rgba(0,0,0,0),#000);
 }
-.colourpicker-slider {
-  position: absolute;
-  top: 1px;
-  left: 152px;
-  width: 20px;
-  height: 150px;
-  background: linear-gradient(red 0,#f0f 17%,#00f 33%,#0ff 50%,#0f0 67%,#ff0 83%,red 100%);
-  cursor: row-resize;
-}
 .colourpicker-grid .colourpicker-picker {
   position: absolute;
   top: 70px;
   left: 70px;
-  width: 12px;
-  height: 12px;
-  border: solid 1px black;
-  border-radius: 10px;
-  margin-top: -6px;
-  margin-left: -6px;
-  background: none;
+  width: 8px;
+  height: 8px;
+  margin-top: -4px;
+  margin-left: -4px;
 }
 .colourpicker-grid .colourpicker-picker > div {
   position: absolute;
@@ -71,12 +56,22 @@
   width: 8px;
   height: 8px;
   border-radius: 8px;
-  border: solid 2px white;
+  border: solid 1px white;
+  background-color: #111;
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
-.colourpicker-picker {
+.colourpicker-slider {
+  position: absolute;
+  top: 1px;
+  left: 152px;
+  width: 20px;
+  height: 150px;
+  background: linear-gradient(red 0,#f0f 17%,#00f 33%,#0ff 50%,#0f0 67%,#ff0 83%,red 100%);
+                              cursor: row-resize;
+}
+.colourpicker-slider-picker {
   position: absolute;
   top: 0;
   left: 0;
