--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -312,6 +312,10 @@
     width: 24px;
     height: 24px;
 }
+.minicolors-theme-bootstrap .minicolors-input.input-xs + .minicolors-swatch {
+    width: 18px;
+    height: 18px;
+}
 .input-group .minicolors-theme-bootstrap:not(:first-child) .minicolors-input {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
