--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -41,7 +41,7 @@
   width: 173px;
   background: white;
   border: solid 1px #CCC;
-  box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+  box-shadow: 0 0 20px rgba(0, 0, 0, .2); /* LTR */
   z-index: 99999;
   box-sizing: content-box;
   display: none;
@@ -75,7 +75,7 @@
 .minicolors .minicolors-grid {
   position: relative;
   top: 1px;
-  left: 1px;
+  left: 1px; /* LTR */
   width: 150px;
   height: 150px;
   margin-bottom: 2px;
@@ -86,7 +86,7 @@
 .minicolors .minicolors-grid-inner {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 0; /* LTR */
   width: 150px;
   height: 150px;
 }
@@ -116,7 +116,7 @@
 .minicolors-opacity-slider {
   position: absolute;
   top: 1px;
-  left: 152px;
+  left: 152px; /* LTR */
   width: 20px;
   height: 150px;
   background-color: white;
@@ -137,7 +137,7 @@
 }
 
 .minicolors-opacity-slider {
-  left: 173px;
+  left: 173px; /* LTR */
   background-position: -40px 0;
   display: none;
 }
@@ -150,20 +150,20 @@
 .minicolors-grid .minicolors-picker {
   position: absolute;
   top: 70px;
-  left: 70px;
+  left: 70px; /* LTR */
   width: 12px;
   height: 12px;
   border: solid 1px black;
   border-radius: 10px;
   margin-top: -6px;
-  margin-left: -6px;
+  margin-left: -6px; /* LTR */
   background: none;
 }
 
 .minicolors-grid .minicolors-picker > div {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 0; /* LTR */
   width: 8px;
   height: 8px;
   border-radius: 8px;
@@ -174,7 +174,7 @@
 .minicolors-picker {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 0; /* LTR */
   width: 18px;
   height: 2px;
   background: white;
@@ -186,7 +186,7 @@
 /* Swatches */
 .minicolors-swatches,
 .minicolors-swatches li {
-  margin: 5px 0 3px 5px;
+  margin: 5px 0 3px 5px; /* LTR */
   padding: 0;
   list-style: none;
   overflow: hidden;
@@ -194,13 +194,13 @@
 
 .minicolors-swatches .minicolors-swatch {
   position: relative;
-  float: left;
+  float: left; /* LTR */
   cursor: pointer;
-  margin:0 4px 0 0;
+  margin:0 4px 0 0; /* LTR */
 }
 
 .minicolors-with-opacity .minicolors-swatches .minicolors-swatch {
-  margin-right: 7px;
+  margin-right: 7px; /* LTR */
 }
 
 .minicolors-swatch.selected {
@@ -219,7 +219,7 @@
 .minicolors-inline .minicolors-panel {
   position: relative;
   top: auto;
-  left: auto;
+  left: auto; /* LTR */
   box-shadow: none;
   z-index: auto;
   display: inline-block;
@@ -228,20 +228,20 @@
 /* Default theme */
 .minicolors-theme-default .minicolors-swatch {
   top: 5px;
-  left: 5px;
+  left: 5px; /* LTR */
   width: 18px;
   height: 18px;
 }
 .minicolors-theme-default .minicolors-swatches .minicolors-swatch {
   margin-bottom: 2px;
   top: 0;
-  left: 0;
+  left: 0; /* LTR */
   width: 18px;
   height: 18px;
 }
 .minicolors-theme-default.minicolors-position-right .minicolors-swatch {
-  left: auto;
-  right: 5px;
+  left: auto; /* LTR */
+  right: 5px; /* LTR */
 }
 .minicolors-theme-default.minicolors {
   width: auto;
@@ -251,18 +251,18 @@
   height: 20px;
   width: auto;
   display: inline-block;
-  padding-left: 26px;
+  padding-left: 26px; /* LTR */
 }
 .minicolors-theme-default.minicolors-position-right .minicolors-input {
-  padding-right: 26px;
-  padding-left: inherit;
+  padding-right: 26px; /* LTR */
+  padding-left: inherit; /* LTR */
 }
 
 /* Bootstrap theme */
 .minicolors-theme-bootstrap .minicolors-swatch {
   z-index: 2;
   top: 3px;
-  left: 3px;
+  left: 3px; /* LTR */
   width: 28px;
   height: 28px;
   border-radius: 3px;
@@ -270,7 +270,7 @@
 .minicolors-theme-bootstrap .minicolors-swatches .minicolors-swatch {
   margin-bottom: 2px;
   top: 0;
-  left: 0;
+  left: 0; /* LTR */
   width: 20px;
   height: 20px;
 }
@@ -278,20 +278,20 @@
   border-radius: inherit;
 }
 .minicolors-theme-bootstrap.minicolors-position-right > .minicolors-swatch {
-  left: auto;
-  right: 3px;
+  left: auto; /* LTR */
+  right: 3px; /* LTR */
 }
 .minicolors-theme-bootstrap .minicolors-input {
   float: none;
-  padding-left: 44px;
+  padding-left: 44px; /* LTR */
 }
 .minicolors-theme-bootstrap.minicolors-position-right .minicolors-input {
-  padding-right: 44px;
-  padding-left: 12px;
+  padding-right: 44px; /* LTR */
+  padding-left: 12px; /* LTR */
 }
 .minicolors-theme-bootstrap .minicolors-input.input-lg + .minicolors-swatch {
   top: 4px;
-  left: 4px;
+  left: 4px; /* LTR */
   width: 37px;
   height: 37px;
   border-radius: 5px;
@@ -305,14 +305,14 @@
   height: 18px;
 }
 .input-group .minicolors-theme-bootstrap:not(:first-child) .minicolors-input {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  border-top-left-radius: 0; /* LTR */
+  border-bottom-left-radius: 0; /* LTR */
 }
 
 /* Semantic Ui theme */
 .minicolors-theme-semanticui .minicolors-swatch {
   top: 0;
-  left: 0;
+  left: 0; /* LTR */
   padding: 18px;
 }
 .minicolors-theme-semanticui input {
