--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -41,7 +41,7 @@
   width: 173px;
   background: white;
   border: solid 1px #CCC;
-  box-shadow: 0 0 20px rgba(0, 0, 0, .2); /* LTR */
+  box-shadow: 0 0 20px rgba(0, 0, 0, .2);
   z-index: 99999;
   box-sizing: content-box;
   display: none;
@@ -82,11 +82,14 @@
   background-position: -120px 0;
   cursor: crosshair;
 }
+[dir=rtl] .minicolors .minicolors-grid {
+  right: 1px;
+}
 
 .minicolors .minicolors-grid-inner {
   position: absolute;
   top: 0;
-  left: 0; /* LTR */
+  left: 0;
   width: 150px;
   height: 150px;
 }
@@ -123,6 +126,10 @@
   background-position: 0 0;
   cursor: row-resize;
 }
+[dir=rtl] .minicolors-slider,
+[dir=rtl] .minicolors-opacity-slider {
+  right: 152px;
+}
 
 .minicolors-slider-saturation .minicolors-slider {
   background-position: -60px 0;
@@ -140,6 +147,9 @@
   left: 173px; /* LTR */
   background-position: -40px 0;
   display: none;
+}
+[dir=rtl] .minicolors-opacity-slider {
+  right: 173px;
 }
 
 .minicolors-with-opacity .minicolors-opacity-slider {
@@ -191,6 +201,10 @@
   list-style: none;
   overflow: hidden;
 }
+[dir=rtl] .minicolors-swatches,
+[dir=rtl] .minicolors-swatches li {
+  margin: 5px 5px 3px 0;
+}
 
 .minicolors-swatches .minicolors-swatch {
   position: relative;
@@ -198,9 +212,16 @@
   cursor: pointer;
   margin:0 4px 0 0; /* LTR */
 }
+[dir=rtl] .minicolors-swatches .minicolors-swatch {
+  float: right;
+  margin:0 0 0 4px;
+}
 
 .minicolors-with-opacity .minicolors-swatches .minicolors-swatch {
   margin-right: 7px; /* LTR */
+}
+[dir=rtl] .minicolors-with-opacity .minicolors-swatches .minicolors-swatch {
+  margin-left: 7px;
 }
 
 .minicolors-swatch.selected {
@@ -224,6 +245,9 @@
   z-index: auto;
   display: inline-block;
 }
+[dir=rtl] .minicolors-inline .minicolors-panel {
+  right: auto;
+}
 
 /* Default theme */
 .minicolors-theme-default .minicolors-swatch {
@@ -232,6 +256,9 @@
   width: 18px;
   height: 18px;
 }
+[dir=rtl] .minicolors-theme-default .minicolors-swatch {
+  right: 5px;
+}
 .minicolors-theme-default .minicolors-swatches .minicolors-swatch {
   margin-bottom: 2px;
   top: 0;
@@ -239,9 +266,16 @@
   width: 18px;
   height: 18px;
 }
+[dir=rtl] .minicolors-theme-default .minicolors-swatches .minicolors-swatch {
+  right: 0;
+}
 .minicolors-theme-default.minicolors-position-right .minicolors-swatch {
   left: auto; /* LTR */
   right: 5px; /* LTR */
+}
+[dir=rtl] .minicolors-theme-default.minicolors-position-left .minicolors-swatch {
+  left: 5px;
+  right: auto;
 }
 .minicolors-theme-default.minicolors {
   width: auto;
@@ -253,9 +287,16 @@
   display: inline-block;
   padding-left: 26px; /* LTR */
 }
+[dir=rtl] .minicolors-theme-default .minicolors-input {
+  padding-right: 26px;
+}
 .minicolors-theme-default.minicolors-position-right .minicolors-input {
   padding-right: 26px; /* LTR */
   padding-left: inherit; /* LTR */
+}
+[dir=rtl] .minicolors-theme-default.minicolors-position-left .minicolors-input {
+  padding-right: inherit;
+  padding-left: 26px;
 }
 
 /* Bootstrap theme */
@@ -267,12 +308,18 @@
   height: 28px;
   border-radius: 3px;
 }
+[dir=rtl] .minicolors-theme-bootstrap .minicolors-swatch {
+  right: 3px;
+}
 .minicolors-theme-bootstrap .minicolors-swatches .minicolors-swatch {
   margin-bottom: 2px;
   top: 0;
   left: 0; /* LTR */
   width: 20px;
   height: 20px;
+}
+[dir=rtl] .minicolors-theme-bootstrap .minicolors-swatches .minicolors-swatch {
+  right: 0;
 }
 .minicolors-theme-bootstrap .minicolors-swatch-color {
   border-radius: inherit;
@@ -281,13 +328,24 @@
   left: auto; /* LTR */
   right: 3px; /* LTR */
 }
+[dir=rtl] .minicolors-theme-bootstrap.minicolors-position-left > .minicolors-swatch {
+  left: 3px;
+  right: auto;
+}
 .minicolors-theme-bootstrap .minicolors-input {
   float: none;
   padding-left: 44px; /* LTR */
 }
+[dir=rtl] .minicolors-theme-bootstrap .minicolors-input {
+  padding-right: 44px;
+}
 .minicolors-theme-bootstrap.minicolors-position-right .minicolors-input {
   padding-right: 44px; /* LTR */
   padding-left: 12px; /* LTR */
+}
+[dir=rtl] .minicolors-theme-bootstrap.minicolors-position-left .minicolors-input {
+  padding-right: 12px;
+  padding-left: 44px;
 }
 .minicolors-theme-bootstrap .minicolors-input.input-lg + .minicolors-swatch {
   top: 4px;
@@ -295,6 +353,9 @@
   width: 37px;
   height: 37px;
   border-radius: 5px;
+}
+[dir=rtl] .minicolors-theme-bootstrap .minicolors-input.input-lg + .minicolors-swatch {
+  right: 4px;
 }
 .minicolors-theme-bootstrap .minicolors-input.input-sm + .minicolors-swatch {
   width: 24px;
@@ -308,12 +369,19 @@
   border-top-left-radius: 0; /* LTR */
   border-bottom-left-radius: 0; /* LTR */
 }
+[dir=rtl] .input-group .minicolors-theme-bootstrap:not(:first-child) .minicolors-input {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
 
 /* Semantic Ui theme */
 .minicolors-theme-semanticui .minicolors-swatch {
   top: 0;
   left: 0; /* LTR */
   padding: 18px;
+}
+[dir=rtl] .minicolors-theme-semanticui .minicolors-swatch {
+  right: 0;
 }
 .minicolors-theme-semanticui input {
   text-indent: 30px;
