--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -288,6 +288,8 @@
   padding-left: 26px; /* LTR */
 }
 [dir=rtl] .minicolors-theme-default .minicolors-input {
+  text-align: right;
+  unicode-bidi: plaintext;
   padding-right: 26px;
 }
 .minicolors-theme-default.minicolors-position-right .minicolors-input {
@@ -337,6 +339,8 @@
   padding-left: 44px; /* LTR */
 }
 [dir=rtl] .minicolors-theme-bootstrap .minicolors-input {
+  text-align: right;
+  unicode-bidi: plaintext;
   padding-right: 44px;
 }
 .minicolors-theme-bootstrap.minicolors-position-right .minicolors-input {
