Fix scrolling on mobile devices
Fix scrolling on mobile devices when user want pick a color from color pallete

--- a/jquery.minicolors.css
+++ b/jquery.minicolors.css
@@ -55,6 +55,7 @@
   z-index: 99999;
   box-sizing: content-box;
   display: none;
+  touch-action: none;
 }
 
 .minicolors-panel.minicolors-visible {
